--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 <table class="pub_table">
   <tbody>
 
+
+
     <tr>
     <td class="pub_td1"><img src="./files/mesh-rft.gif" class="papericon" width="200" height="150"></td>
     <td class="pub_td2"><br><b>Mesh-RFT: Enhancing Mesh Generation via Fine-grained Reinforcement Fine-Tuning</b>
@@ -194,6 +196,18 @@
 <h2>Preprints</h2>
 <table class="pub_table">
   <tbody>
+
+  
+  <tr>
+    <td class="pub_td1"><img src="./files/quadgpt.png" class="papericon" width="200" height="150"></td>
+    <td class="pub_td2"><br><b>QuadGPT: Native Quadrilateral Mesh Generation with Autoregressive Models</b>
+      <br><b>Jian Liu</b>, Chunshi Wang, Song Guo, Haohan Weng, Zhen Zhou, Zhiqi Li, Jiaao Yu, Yiling Zhu, Jing Xu, Biwen Lei, Zhuo Chen, Chunchao Guo
+      <br><b>Under Review</b>
+      <br>
+      [<a href="https://arxiv.org/abs/2509.21420">PDF</a>]
+      [<a href="https://hitcslj.github.io/mesh-rft/">Project Page</a>]
+    </td>
+  </tr>  
   
   <tr>
     <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon" width="200" height="80"></td>
@@ -207,53 +221,7 @@
   </tr>
 
 
-  <!-- <tr>
-    <td class="pub_td1"><img src="./files/pvcontext-pipeline.png" class="papericon"></td>
-    <td class="pub_td2"><br><b>PVContext: Hybrid Context Model for Point Cloud Compression</b>
-      <br>Guoqing Zhang, Wenbo Zhao, <b>Jian Liu</b>, Yuanchao Bai, Junjun Jiang, Xianming Liu
-      <br>Arxiv 2024
-      <br>
-      [<a href="https://arxiv.org/abs/2409.12724">PDF</a>]
-    </td>
-  </tr>
-
-
-  <tr>
-    <td class="pub_td1"><img src="./files/diffocc-pipeline.png" class="papericon"></td>
-    <td class="pub_td2"><br><b>Diffusion-Occ: 3D Point Cloud Completion via Occupancy Diffusion</b>
-      <br>Guoqing Zhang, <b>Jian Liu*</b>
-      <br>Arxiv 2024
-      <br>
-      [<a href="https://www.arxiv.org/abs/2408.14846">PDF</a>]
-    </td>
-  </tr>
-
-  
-  <tr>
-    <td class="pub_td1"><img src="./files/ude-pipeline.png" class="papericon"></td>
-    <td class="pub_td2"><br><b>Stealing Stable Diffusion Prior for Robust Monocular Depth Estimation</b>
-      <br> Yifan Mao*, <b>Jian Liu*</b>, Xianming Liu
-      <br>Arxiv 2024
-      <br>
-      [<a href="https://arxiv.org/abs/2403.05056">PDF</a>]
-      [<a href="https://github.com/hitcslj/SSD">Github</a>]
-      [<a href="https://hitcslj.github.io/ssd/">Project Page</a>]
-    </td>
-  </tr>
-
-
-  
-  <tr>
-    <td class="pub_td1"><img src="./files/reps_pipeline_new.png" class="papericon"></td>
-    <td class="pub_td2"><br><b>REPS: Reconstruction-based Point Cloud Sampling</b>
-      <br>Guoqing Zhang*, <b>Jian Liu*</b>, Wenbo Zhao, Xianming Liu
-      <br>Arxiv 2024
-      <br>
-      [<a href="https://arxiv.org/abs/2403.05047">PDF</a>]
-      [<a href="https://github.com/hitcslj/REPS">Github</a>]
-    </td>
-  </tr> -->
-
+ 
 
 
   </tbody>
