--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <br><b>Under Review</b>
       <br>
       [<a href="https://arxiv.org/abs/2509.21420">PDF</a>]
-      [<a href="https://hitcslj.github.io/mesh-rft/">Project Page</a>]
+      [<a href="https://hitcslj.github.io/QuadGPT/">Project Page</a>]
     </td>
   </tr>  
   
