--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
 </ul>
 
 
+<h2>Preprints</h2>
+<table class="pub_table">
+  <tbody>
+
+  
+  <tr>
+    <td class="pub_td1"><img src="./files/quadgpt.png" class="papericon" width="200"></td>
+    <td class="pub_td2"><br><b>QuadGPT: Native Quadrilateral Mesh Generation with Autoregressive Models</b>
+      <br><b>Jian Liu</b>, Chunshi Wang, Song Guo, Haohan Weng, Zhen Zhou, Zhiqi Li, Jiaao Yu, Yiling Zhu, Jing Xu, Biwen Lei, Zhuo Chen, Chunchao Guo
+      <br><b>Arxiv 2025</b>
+      <br>
+      [<a href="https://arxiv.org/abs/2509.21420">PDF</a>]
+      [<a href="https://hitcslj.github.io/QuadGPT/">Project Page</a>]
+    </td>
+  </tr>  
+  </tbody>
+</table>
+
 
 <h2>Publications</h2>
 
@@ -132,7 +150,7 @@
     <td class="pub_td1"><img src="./files/mesh-rft.gif" class="papericon" width="200" height="150"></td>
     <td class="pub_td2"><br><b>Mesh-RFT: Enhancing Mesh Generation via Fine-grained Reinforcement Fine-Tuning</b>
       <br><b>Jian Liu*</b>, Jing Xu*, Song Guo, Jing Li, Jingfeng Guo, Jiaao Yu, Haohan Weng, Biwen Lei, Xianghui Yang, Zhuo Chen, Fangqi Zhu, Tao Han, Chunchao Guo
-      <br><b>NeurIPS 2025, Spotlight</b>
+      <br><b>NeurIPS 2025</b>  (<font color='red'><strong>spotlight</strong></font>)
       <br>
       [<a href="https://arxiv.org/abs/2505.16761">PDF</a>]
       [<a href="https://github.com/hitcslj/Mesh-RFT">Github</a>]
@@ -193,39 +211,7 @@
   </tbody>
 </table>
 
-<h2>Preprints</h2>
-<table class="pub_table">
-  <tbody>
 
-  
-  <tr>
-    <td class="pub_td1"><img src="./files/quadgpt.png" class="papericon" width="200" height="150"></td>
-    <td class="pub_td2"><br><b>QuadGPT: Native Quadrilateral Mesh Generation with Autoregressive Models</b>
-      <br><b>Jian Liu</b>, Chunshi Wang, Song Guo, Haohan Weng, Zhen Zhou, Zhiqi Li, Jiaao Yu, Yiling Zhu, Jing Xu, Biwen Lei, Zhuo Chen, Chunchao Guo
-      <br><b>Under Review</b>
-      <br>
-      [<a href="https://arxiv.org/abs/2509.21420">PDF</a>]
-      [<a href="https://hitcslj.github.io/QuadGPT/">Project Page</a>]
-    </td>
-  </tr>  
-  
-  <tr>
-    <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon" width="200" height="80"></td>
-    <td class="pub_td2"><br><b>A Comprehensive Survey on 3D Content Generation</b>
-      <br><b>Jian Liu</b>, Xiaoshui Huang, Tianyu Huang, Lu Chen, Yuenan Hou, Shixiang Tang, Ziwei Liu, Wanli Ouyang, Wangmeng Zuo, Junjun Jiang, Xianming Liu
-      <br>Arxiv 2024
-      <br>
-      [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
-      [<a href="https://github.com/hitcslj/Awesome-AIGC-3D">Github</a>]
-    </td>
-  </tr>
-
-
- 
-
-
-  </tbody>
-</table>
 
 
 <h2>Technical Reports</h2>
