--- a/QuadGPT/index.html
+++ b/QuadGPT/index.html
@@ -203,20 +203,27 @@ In this paper, we introduce QuadGPT, the first autoregressive framework for gene
 QuadGPT formulates this as a sequence prediction paradigm, distinguished by two key innovations: a unified tokenization method to handle mixed topologies of triangles and quadrilaterals, and a specialized Reinforcement Learning fine-tuning method tDPO for better generation quality. 
 Extensive experiments demonstrate that QuadGPT significantly surpasses previous triangle-to-quad conversion pipelines in both geometric accuracy and topological quality. 
 Our work establishes a new benchmark for native quad-mesh generation and showcases the power of combining large-scale autoregressive models with topology-aware RL refinement for creating structured 3D assets.								</p>
-								<a class="image main"><img src="images/teaser.jpg" alt="" /></a>
+								<a class="image main"><img src="images/teaser.jpg " alt="" /></a>
 							</article>
 							<article class="post featured">
 								<header class="major">
 									<span class="date"><b>METHOD</b></span>
 								</header>
-								<a class="image main"><img src="images/method.jpg" alt="" /></a>
+								<a class="image main" style="display: flex; justify-content: center;"><img src="images/method.jpg" alt="" style="width: 100%;" /></a>
 								<p>
 									Our approach, QuadGPT, introduces the first autoregressive framework for the direct generation of native quadrilateral and mixed-element meshes. The methodology consists of three core pillars:   (1) a unified serialization scheme to represent mixed-topology meshes as a single token sequence; (2) a powerful autoregressive architecture for generative pre-training; and (3) tDPO stage with a novel topological reward for direct topological optimization.
 								</p>
 								<header class="major">
 									<video src="images/demo.webm" controls autoplay loop style="width: 100%;"></video>
 								</header>
-							</article>				
+							</article>		
+							
+							<article class="post featured">
+								<header class="major">
+									<span class="date"><b>RESULTS</b></span>
+								</header>
+								ToDO
+							</article>
 						
 							<article class="post featured">
 								<header class="major">
