--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 <h2>Service</h2>
 
 <ul>
-  <li> Conference Reviewer: ICLR, NeurIPS, ACM MM, ICME.</li>
+  <li> Conference Reviewer: CVPR2026, ICLR2026, NeurIPS2025, ACM MM2025.</li>
 </ul>
 
 
