--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <td width="670">
         <div id="toptitle">
         <h1>Jian Liu &nbsp; 刘建</h1></div>
-        <h3>Phd student</h3>
+        <h3>Ph.D. Student</h3>
         <p> Pervasive Intelligence Lab
         <br>Department of Computer Science and Engineering
         <br>Hong Kong University of Science and Technology
@@ -66,23 +66,23 @@
 <h2>Biography</h2>
 
 <p> 
-  I am a first-year PhD student in Computer Science and Engineering at the Hong Kong University of Science and Technology (HKUST), supervised by <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Prof. Song Guo</a></b>. 
-  I received my Bachelor's and Master's degrees in Computer Science and Technology from Harbin Institute of Technology (HIT) in 2022 and 2024, respectively.
-  My research focuses on cutting-edge areas including <strong>3D content generation</strong>, <strong>auto-regressive models and diffusion models</strong>, and <strong>reinforcement learning</strong>.
+  I am a first-year Ph.D. student in Computer Science and Engineering at the Hong Kong University of Science and Technology (HKUST), advised by <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Prof. Song Guo</a></b>. 
+  I also serve as a group leader in the <b><a href="https://www.hkpeilab.com/people">Pervasive Intelligence Lab</a></b> and am currently a research intern at <b><a href="https://3d.hunyuan.tencent.com/">Tencent Hunyuan3D</a></b>. 
+  My research interests include <strong>3D mesh generation</strong>, <strong>3D generation for robotics</strong>, and <strong>reinforcement learning for generative models</strong>. Please feel free to reach out via email for discussions or potential collaborations.
 </p>
 <h2>Experience</h2>
 <ul>
   <li>
-    July.2025 - Now , <i>Qingyun Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, working closely with <b><a href="https://whaohan.github.io/">Haohan Weng</a></b> and <b><a href="https://scholar.google.com/citations?user=5d5Y9BoAAAAJ&hl=zh-CN">Biwen Lei</a></b>
+    July.2025 - Now , <i>Qingyun Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, supervised by <b><a href="https://www.linkedin.com/in/chunchao-guo-a8b6a138/?originalSubdomain=cn">Chunchao Guo</a></b>  and <b><a href="https://scholar.google.com/citations?user=5d5Y9BoAAAAJ&hl=zh-CN">Biwen Lei</a></b>
   </li>
   <li>
-    Aug.2024 - June.2025 , <i>Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, working closely with <b><a href="https://whaohan.github.io/">Haohan Weng</a></b>
+    Aug.2024 - June.2025 , <i>Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, supervised by <b><a href="https://www.linkedin.com/in/chunchao-guo-a8b6a138/?originalSubdomain=cn">Chunchao Guo</a></b>  and <b><a href="https://scholar.google.com/citations?user=5d5Y9BoAAAAJ&hl=zh-CN">Biwen Lei</a></b>
   </li>
   <li>
-    Sep.2023 - July.2024 , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <b><a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a></b> and <b><a href="https://wlouyang.github.io/">Wanli Ouyang</a></b> 
+    Sep.2023 - July.2024 , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <b><a href="https://scholar.google.com/citations?user=pw_0Z_UAAAAJ&hl=en">Wanli Ouyang</a></b> and  <b><a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a></b>
   </li>
   <li>
-    May.2022 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>, supervised by <b><a href="https://github.com/hzwer">Zhewei Huang</a></b> 
+    May.2022 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>, supervised by <b><a href="https://scholar.google.com/citations?user=zYI0rysAAAAJ&hl=en">Shuchang Zhou</a></b> and <b><a href="https://github.com/hzwer">Zhewei Huang</a></b> 
   </li>
   <li>
     Aug.2021 - Oct.2021, <i> Software Dev Engineer Intern</i>, <b><a href="https://www.alibabagroup.com/">Alibaba</a></b>
