--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <td class="pub_td1"><img src="./files/mesh-rft.gif" class="papericon" width="200" height="150"></td>
     <td class="pub_td2"><br><b>Mesh-RFT: Enhancing Mesh Generation via Fine-grained Reinforcement Fine-Tuning</b>
       <br><b>Jian Liu*</b>, Jing Xu*, Song Guo, Jing Li, Jingfeng Guo, Jiaao Yu, Haohan Weng, Biwen Lei, Xianghui Yang, Zhuo Chen, Fangqi Zhu, Tao Han, Chunchao Guo
-      <br><b>NeurIPS 2025</b>  (<font color='red'><strong>spotlight</strong></font>)
+      <br><font color='red'><strong>NeurIPS 2025 (spotlight, top 3.2%)</strong></font>
       <br>
       [<a href="https://arxiv.org/abs/2505.16761">PDF</a>]
       [<a href="https://github.com/hitcslj/Mesh-RFT">Github</a>]
