--- a/index.html
+++ b/index.html
@@ -123,19 +123,20 @@
 <h2>Preprints</h2>
 <table class="pub_table">
   <tbody>
-
   
   <tr>
-    <td class="pub_td1"><img src="./files/quadgpt.png" class="papericon" width="200"></td>
-    <td class="pub_td2"><br><b>QuadGPT: Native Quadrilateral Mesh Generation with Autoregressive Models</b>
-      <br><b>Jian Liu</b>, Chunshi Wang, Song Guo, Haohan Weng, Zhen Zhou, Zhiqi Li, Jiaao Yu, Yiling Zhu, Jing Xu, Biwen Lei, Zhuo Chen, Chunchao Guo
-      <br><b>Arxiv 2025</b>
+    <td class="pub_td1"><img src="./files/teaser_meshpro.png" class="papericon" width="200"></td>
+    <td class="pub_td2"><br><b>Mesh-Pro: Asynchronous Advantage-guided Ranking Preference Optimization for Artist-style Quadrilateral Mesh Generation</b>
+      <br>Zhen Zhou*, <b>Jian Liu*</b>, Biwen Lei, Jing Xu, Haohan Weng, Yiling Zhu, Zhuo Chen, Junfeng Fan, Yunkai Ma, Dazhao Du, Song Guo, Fengshui Jing, Chunchao Guo
+      <br><b>Comming Soon</b>
       <br>
-      [<a href="https://arxiv.org/abs/2509.21420">PDF</a>]
-      [<a href="https://hitcslj.github.io/QuadGPT/">Project Page</a>]
-      [<a href="https://3d.hunyuan.tencent.com/studio/">Public API</a>]
+      [<a href="">PDF</a>]
+      [<a href="">Project Page</a>]
+      [<a href="">Public API</a>]
     </td>
   </tr>  
+  
+
   </tbody>
 </table>
 
@@ -145,7 +146,17 @@
 <table class="pub_table">
   <tbody>
 
-
+  <tr>
+    <td class="pub_td1"><img src="./files/quadgpt.png" class="papericon" width="200"></td>
+    <td class="pub_td2"><br><b>QuadGPT: Native Quadrilateral Mesh Generation with Autoregressive Models</b>
+      <br><b>Jian Liu</b>, Chunshi Wang, Song Guo, Haohan Weng, Zhen Zhou, Zhiqi Li, Jiaao Yu, Yiling Zhu, Jing Xu, Biwen Lei, Zhuo Chen, Chunchao Guo
+      <br><b>ICLR 2026</b>
+      <br>
+      [<a href="https://arxiv.org/abs/2509.21420">PDF</a>]
+      [<a href="https://hitcslj.github.io/QuadGPT/">Project Page</a>]
+      [<a href="https://3d.hunyuan.tencent.com/studio/">Public API</a>]
+    </td>
+  </tr>  
 
     <tr>
     <td class="pub_td1"><img src="./files/mesh-rft.gif" class="papericon" width="200" height="150"></td>
