--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p> 
   I am a first-year Ph.D. student in Computer Science and Engineering at the Hong Kong University of Science and Technology (HKUST), advised by <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Prof. Song Guo</a></b>. 
   I also serve as a group leader in the <b><a href="https://www.hkpeilab.com/people">Pervasive Intelligence Lab</a></b> and am currently a research intern at <b><a href="https://3d.hunyuan.tencent.com/">Tencent Hunyuan3D</a></b>. 
-  My research interests include <strong>3D mesh generation</strong>, <strong>3D generation for robotics</strong>, and <strong>reinforcement learning for generative models</strong>. Please feel free to reach out via email for discussions or potential collaborations.
+  My long-term goal is to make 3D creation accessible to everyone—so that anyone can create high-quality, artist-style 3D meshes. I am tackling this goal step by step, and once it is well solved, I hope to further explore generating 3D worlds where embodied agents (e.g., robots) can freely explore and learn, ultimately enabling robust simulation-to-real transfer.
 </p>
 <h2>Experience</h2>
 <ul>
