--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p> 
   I am a first-year Ph.D. student in Computer Science and Engineering at the Hong Kong University of Science and Technology (HKUST), advised by <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Prof. Song Guo</a></b>. 
   I also serve as a group leader in the <b><a href="https://www.hkpeilab.com/people">Pervasive Intelligence Lab</a></b> and am currently a research intern at <b><a href="https://3d.hunyuan.tencent.com/">Tencent Hunyuan3D</a></b>. 
-  My long-term goal is to make 3D creation accessible to everyone—so that anyone can create high-quality, artist-style 3D meshes. I am tackling this goal step by step, and once it is well solved, I hope to further explore generating 3D worlds where embodied agents (e.g., robots) can freely explore and learn, ultimately enabling robust simulation-to-real transfer.
+  My long-term goal is to make 3D creation accessible to everyone, enabling anyone to create high-quality, artist-style 3D meshes. I am pursuing this goal step by step; once it is well addressed, I hope to further explore generating 3D worlds where embodied agents (e.g., robots) can freely explore and learn, ultimately enabling robust simulation-to-real transfer.
 </p>
 <h2>Experience</h2>
 <ul>
@@ -233,7 +233,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/hunyuan3d_studio.png" class="papericon"></td>
     <td class="pub_td2"><br><b>Hunyuan3D Studio: End-to-End AI Pipeline for Game-Ready 3D Asset Generation</b>
-      <br>Jian Liu is one of the <b>core contributors</b> of Low-poly Generation
+      <br>Jian Liu is one of the <font color='red'><b>core contributors</b></font> of Low-poly Generation
       <br>
       [<a href="https://arxiv.org/abs/2509.12815">PDF</a>]
       [<a href="https://3d.hunyuan.tencent.com/">Projects Page</a>]
@@ -244,7 +244,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/hunyuan3d_2.png" class="papericon"></td>
     <td class="pub_td2"><br><b>Hunyuan3D 2.0: Scaling Diffusion Models for High Resolution Textured 3D Assets Generation</b>
-      <br>Jian Liu is one of the <b>core contributors</b> of Low-poly Generation
+      <br>Jian Liu is one of the <font color='red'><b>core contributors</b></font> of Low-poly Generation
       <br>
       [<a href="https://arxiv.org/abs/2501.12202">PDF</a>]
       [<a href="https://github.com/Tencent/Hunyuan3D-2">Github</a>]
